# kairos_lab

./: LICENSE  README.md  main.py  pyproject.toml  sample_script.py
kairos_lab/: models.py
kairos_lab/agents/: architect.py  ast_parser.py  correctness_critic.py  dataflow_agent.py  dependency_resolver.py  generator.py  memory_agent.py  performance_critic.py  profiler.py  project_graph_builder.py
sample_project/: data_loader.py  main.py  model.py  trainer.py
