[project]
name = "kairos-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.2.19",
    "langgraph>=1.1.2",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "torch>=2.10.0",
]
